# ESP32-Web-Server

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs  server.rs  wifi.rs
website/: index.html  script.js  style.css
